--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Dezi-Stats
 
 0.001000    17 Aug 2012
-        First version, released on an unsuspecting world.
+    First version, released on an unsuspecting world.
 
+0.001001    20 Aug 2012
+    * fix number of tests, and prereq tests
