--- a/Changes
+++ b/Changes
@@ -5,3 +5,6 @@ Revision history for Dezi-Stats
 
 0.001001    20 Aug 2012
     * fix number of tests, and prereq tests
+
+0.001002    20 Aug 2012
+    * add URI 'path' to logged stats
